# MABS

./: .gitignore  Copie de Calendrier-Harmonisation-M1.xlsx  Partage - Raccourci.lnk  edt.xlsx
Analyse_Multivariée/: scriptProjet.R  tabmil.txt  tabsp.txt
BD/: Bases de Données et Technologies du Web.odt  ~$ses de Données et Technologies du Web.odt
BioInfo_des_seq/: BDS.docx  Projet 4.odt  PrésentationBDS.pptx  projet_bioinfo_sequences.odt
Bioinfo Geno Post Geno/: Annale BGPG 2013 - Google Documents.URL  HMM.docx  Maxime_CHAZALVIEL_TP4_BGPG.docx  Modélisation_du_réseau_métabolique_Maxime_CHAZALVIEL.docx  TP4_Maxime_CHAZALVIEL.docx  Thumbs.db  abI-genvorhersage.ppt  ~$délisation_du_réseau_métabolique_Maxime_CHAZALVIEL.docx
Bioinfo Geno Post Geno/Projet_Solo/show-20111109/: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in
Bioinfo Geno Post Geno/Projet_Solo/show-20111109/autom4te.cache/: output.0  traces.0
Bioinfo Geno Post Geno/Projet_Solo/show-20111109/data/: Makefile  Makefile.am  Makefile.in  gene_1c.model  gene_1c_si.model  gene_2c.model  gene_2c_si.model  gene_3c.model  gene_3c_si.model  gene_4c.model  gene_4c_si.model
Bioinfo Geno Post Geno/Projet_Solo/show-20111109/doc/: show_doc.ps
Bioinfo Geno Post Geno/Projet_Solo/show-20111109/scripts/: Makefile  Makefile.am  Makefile.in  add_rbs_ovlp.pl  add_rbs_ovlp.pl.in  add_state_to_intergenic.pl  add_state_to_intergenic.pl.in  bactgeneSHOW  bactgeneSHOW.in  create_annot_file.pl  create_annot_file.pl.in  invcomp.pl  invcomp.pl.in  overlaps_model.pm.in  rbs_model.pm.in
Bioinfo Geno Post Geno/Projet_Solo/show-20111109/src/: CodingSeq.cc  CodingSeq.h  CodonCodingSeq.cc  CodonCodingSeq.h  DnaCodingSeq.cc  DnaCodingSeq.h  HiddenMarkovModel.cc  HiddenMarkovModel.h  HiddenMarkovModel_const.cc  HmmObservations.cc  HmmObservations.h  HmmTransitions.cc  HmmTransitions.h  HomologCodingSeq.cc  HomologCodingSeq.h  Makefile  Makefile.am  Makefile.in  ObsSequence.cc  ObsSequence.h  Output.cc  Output.h  Param_EM.cc  Param_EM.h  Param_Simul.cc  Param_Simul.h  Param_Vit.cc  Param_Vit.h  PseudoOrderLoglMax.cc  PseudoOrderLoglMax.h  SelectModel.cc  SelectModel.h  SequenceSet.cc  SequenceSet.h  config.h  config.h.in  const.h  int2char.cc  int2char.h  main_emfit.cc  (+6 more)
Fouilles_de_données/: Fouille de donnée_Clustering.docx  (+5 more)
(+745 files in other folders)
